@@ -404,19 +404,34 @@
         <key>/schemas/apps/gramps/preferences/name-format</key>
         <applyto>/apps/gramps/preferences/name-format</applyto>
         <owner>gramps</owner>
-        <type>string</type>
+        <type>int</type>
         <default>0</default>
         <locale name="C">
           <short>Name display format</short>
-          <long>This key determines the name display format. 
-          Use "0" for "Surname, Firstname",
-          "1" for "Firstname Surname",
-          "2" for "Patronymic Firstname", 
-          and "3" for "Firstname" style.
-          For custom styles, use a string where every character denotes 
-          the name component as follows: "f" for firstname, "s" for surname,
-          "t" for title, "p" for prefix", "u" for suffix", "a" for patronymic,
-          "c" for callname". </long>
+          <long>This key determines the name display format. Use 
+          0 for "Surname, Firstname",
+          1 for "Firstname Surname",
+          2 for "Patronymic Firstname", and
+          3 for "Firstname" style.
+          For custom styles, use -1 and set the name-format-str key.</long>
+        </locale>
+      </schema>
+
+      <schema>
+        <key>/schemas/apps/gramps/preferences/name-format-str</key>
+        <applyto>/apps/gramps/preferences/name-format-str</applyto>
+        <owner>gramps</owner>
+        <type>string</type>
+        <default></default>
+        <locale name="C">
+          <short>Name display format string</short>
+          <long>This key determines the custom name display format.
+          Its value is unimportant unless the name-format keyis set to -1.
+          When used, the following substitutions are made:
+          %t -> title, %f -> given name, %p -> prefix, %s -> suffix,
+          %l -> family name, %y -> patronymic, %c -> call name.
+          The capital letters are substituted for capitalized name components.
+          The %% is substituted with the single % character.</long>
         </locale>
       </schema>
 
